<resources>
    <string name="app_name">About Me</string>
    <string name="name">Abc Dário</string>
    <string name="yellow_start">Yellow star</string>
    <string name="bio">Lorem ipsum dolor sit amet, consectetur adipiscing elit.
\n\nSuspendisse ac dictum urna. Phasellus semper neque in nibh feugiat tincidunt.
\n\nCras velit felis, maximus ut imperdiet sed, consequat in mi. Ut et dignissim urna, ut fringilla turpis.
\n\nUt erat nisl, ultricies ut pulvinar id, ultrices vitae lacus. Phasellus at cursus tellus, ac laoreet orci.
\n\nPellentesque ultrices mi ex. Donec a tempus justo. Nulla metus mi, tempor et faucibus tincidunt, porta quis mauris.
\n\nVivamus vitae sem scelerisque, fringilla purus et, pulvinar ex. Cras sagittis nibh et quam ultricies efficitur.
\n\n\nVivamus id nisl sapien.</string>
    <string name="what_is_your_nickname">What is your nickname?</string>
    <string name="done">Done</string>
</resources>
