<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/name_text"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:text="@string/name"
            style="@style/NameStyle" />

        <EditText
            android:id="@+id/nickname_edit"
            style="@style/NameStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/what_is_your_nickname"
            android:inputType="textPersonName"
            android:textAlignment="center" />

        <Button
            android:id="@+id/done_button"
            style="@style/Widget.AppCompat.Button.Colored"
            android:layout_gravity="center_horizontal"
            android:fontFamily="@font/roboto"
            android:layout_marginTop="@dimen/layout_margin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Button"
            tools:text="@string/done" />

        <TextView
            android:id="@+id/nickname_view"
            style="@style/NameStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:visibility="gone" />

        <ImageView
            android:id="@+id/star_image"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:contentDescription="@string/yellow_start"
            android:layout_marginTop="@dimen/layout_margin"
            app:srcCompat="@android:drawable/btn_star_big_on" />

        <TextView
            android:id="@+id/bio_text"
            android:layout_height="match_parent"
            android:lineSpacingMultiplier="1.2"
            android:text="@string/bio"
            style="@style/NameStyle"/>

    </LinearLayout>
</ScrollView>